1.9.M02 (2012-11-30)
--------------------
o Lifecycle improvements, with proper removal of listeners on shutdown
o Cluster snapshot synchronization used for HA cluster membership
o Implements JMX changes  
o IdGenerators instantiated properly in ModeSwitcher
o ZooKeeper compatibility layer introduced, allows for rolling upgrades from 1.8

1.9.M01 (2012-10-23)
--------------------
o Massive changes to stop using ZooKeeper as a coordination service and instead move to a custom Paxos implementation.
 + Removed all ZooKeeper related functionality
 + Added support classes for event processing from the cluster component
 + All kernel parts with master/slave implementations are instantiated and managed separately and their switching
   happens based on cluster events
 + HA management beans expose the new information properly
 + Updates to documentation

1.8.M07 (2012-08-08)
--------------------
o Fixed bug where transactions committed through slaves in a mixed version cluster would fail
o Master recovery in clusters with only one instance master capable will now always work as expected

1.8.M06 (2012-07-06)
--------------------
o Added transaction push factor that can be configured with amount of slaves to push transactions to. The master will 
  optimistically push each transaction before tx.finish completes to reduce risk of branched data.
o Added the ability for rolling upgrades from versions 1.5.3 onwards.
o Changed the way master election notification and data gathering works, leading to massively reduced writing of data to
  the zookeeper service and a subsequent performance increase.

1.8.M03 (2012-05-24)
--------------------
o Fixed possible but benign NPE when pulling updates
o Really old instances when attempting to join but the tx is not in the master's log will now copy the store

1.8.M01 (2012-04-26)
--------------------
o Fix for a rare race condition in initialization code of zoo keeper client which could make