@@ -5,7 +5,11 @@ For Release Notes, see http://neo4j.org/release-notes
 HA:
 o Lifecycle improvements, with proper removal of listeners on shutdown
 o Cluster snapshot synchronization used for HA cluster membership
-
+o Implements JMX changes  
+o IdGenerators instantiated properly in ModeSwitcher
+o ZooKeeper compatibility layer introduced, allows for rolling upgrades from 1.8
+o Ability to join a cluster even if there's an existing and empty database with a mismatching store ID.
+  If the existing database isn't empty an error will be logged and database unable to start.
 
 Cluster:
 o Moved shared logic, commonly refered to as cluster client into a ClusterClient class.
